--- a/style.css
+++ b/style.css
@@ -52,6 +52,8 @@ body {
     align-items: center;
     gap: 2vh;
     width: 100vw;
+
+    flex-direction: column;
 }
 
 .setting input,
@@ -101,6 +103,16 @@ body {
 
 .buttons button {
     font-size: 2.5vh;
+}
+
+footer {
+    & #copy-url {
+        font-size: 4vh;
+
+        &:active {
+            opacity: 0.5;
+        }
+    }
 }
 
 @media (max-width: 768px) {
