--- a/style.css
+++ b/style.css
@@ -4,13 +4,13 @@
 
 html,
 body {
+    width: 100%;
     height: 100%;
 }
 
 body {
     display: flex;
     flex-direction: column;
-    justify-content: center;
     align-items: center;
     gap: 4vh;
     margin: 0;
@@ -20,7 +20,8 @@ body {
     overflow: auto;
 }
 
-#mode {
+#mode,
+#resolve {
     font-size: 8vh;
     font-weight: bold;
 }
@@ -49,6 +50,11 @@ body {
 .cell.on {
     background-color: whitesmoke;
     box-shadow: inset 0 0 10px rgba(255, 255, 255, 0.5);
+}
+
+.cell.answer::after {
+    content: "〇";
+    color: red;
 }
 
 .setting {
@@ -81,9 +87,14 @@ body {
 }
 
 #area {
+    margin-top: 10vh;
     display: flex;
     flex-direction: row;
-    gap: 4vh;
+    gap: 2vh;
+
+    width: 100%;
+    height: 77vh;
+    overflow-y: auto;
 }
 
 #clicked {
@@ -96,7 +107,7 @@ body {
 
 .inputs {
     display: flex;
-    width: 100%;
+    width: 100vw;
 
     justify-content: center;
 }
@@ -111,7 +122,7 @@ body {
 }
 
 .buttons button {
-    font-size: 2.5vh;
+    font-size: 2.3vh;
 }
 
 header {
@@ -154,11 +165,12 @@ header {
 
 @media (max-width: 768px) {
     body {
-        gap: 2vh;
+        gap: 1vh;
         height: 100%;
     }
 
-    #mode {
+    #mode,
+    #resolve {
         font-size: 4vh;
     }
 
