--- a/style.css
+++ b/style.css
@@ -1,4 +1,5 @@
 * {
+    margin: 0;
     box-sizing: border-box;
 }
 
@@ -12,49 +13,12 @@ body {
     display: flex;
     flex-direction: column;
     align-items: center;
-    gap: 4vh;
+    gap: 1vh;
     margin: 0;
     font-family: Arial, sans-serif;
     background-color: #111;
     color: #f0f0f0;
     overflow: auto;
-}
-
-#mode,
-#resolve {
-    font-size: 8vh;
-    font-weight: bold;
-}
-
-.grid {
-    display: grid;
-    grid-template-columns: repeat(5, 1fr);
-    border: 2px solid #444;
-    border-radius: 8px;
-    height: 100%;
-}
-
-.cell {
-    height: 100%;
-    aspect-ratio: 1;
-    background-color: #222;
-    border: 1px solid #333;
-    cursor: pointer;
-    transition: background-color 0.3s, transform 0.2s;
-}
-
-.cell:hover {
-    border-color: silver;
-}
-
-.cell.on {
-    background-color: whitesmoke;
-    box-shadow: inset 0 0 10px rgba(255, 255, 255, 0.5);
-}
-
-.cell.answer::after {
-    content: "〇";
-    color: red;
 }
 
 .setting {
@@ -64,14 +28,13 @@ body {
     align-items: center;
     gap: 2vh;
     width: 100vw;
-
     flex-direction: column;
 }
 
 .setting input,
 .setting button {
-    font-size: 4vh;
-    padding: 0.5vh 1vh;
+    font-size: 3vh;
+    padding: 0.5vh;
     border: 1px solid #555;
     border-radius: 4px;
     background-color: #222;
@@ -86,29 +49,17 @@ body {
     outline: none;
 }
 
-#area {
-    margin-top: 10vh;
-    display: flex;
-    flex-direction: row;
-    gap: 2vh;
-
-    width: 100%;
-    height: 77vh;
-    overflow-y: auto;
-}
-
 #clicked {
     display: inline-block;
-    font-size: 5vh;
-    width: 16vh;
-    height: 50vh;
+    font-size: 3vh;
+    width: 80vw;
+    height: 8vh;
     overflow: auto;
 }
 
 .inputs {
     display: flex;
     width: 100vw;
-
     justify-content: center;
 }
 
@@ -128,20 +79,15 @@ body {
 header {
     position: absolute;
     display: flex;
-
     top: 0;
-
     align-items: center;
     justify-content: center;
-
     width: 100%;
     height: 10vh;
 
     & #copy-url {
         position: absolute;
-
         left: 2vh;
-
         font-size: 4vh;
 
         &:active {
@@ -152,9 +98,7 @@ header {
 
 .copied {
     left: 12vh;
-
     position: absolute;
-
     opacity: 0;
 
     &.display {
@@ -163,25 +107,19 @@ header {
     }
 }
 
-@media (max-width: 768px) {
+@media (min-width: 767px) {
     body {
-        gap: 1vh;
+        gap: 4vh;
         height: 100%;
     }
 
     #mode,
     #resolve {
-        font-size: 4vh;
+        font-size: 8vh;
     }
 
     #area {
-        flex-direction: column;
-        align-items: center;
-    }
-
-    .grid {
-        width: 85vw;
-        height: fit-content;
+        flex-direction: row;
     }
 
     .setting {
@@ -189,13 +127,13 @@ header {
     }
 
     .setting input {
-        font-size: 3vh;
-        padding: 0.5vh;
+        font-size: 4vh;
+        padding: 0.5vh 1vh;
     }
 
     #clicked {
-        font-size: 3vh;
-        width: 80vw;
-        height: 8vh;
+        font-size: 5vh;
+        width: 16vh;
+        height: 50vh;
     }
 }
