--- a/grid.css
+++ b/grid.css
@@ -6,7 +6,7 @@
     gap: 2vh;
     width: 100%;
 
-    height: 77%;
+    height: 70%;
 
     overflow-y: auto;
 }
@@ -50,6 +50,10 @@
 }
 
 #resolver {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+
     & button {
         font-weight: bold;
         font-size: 4vh;
