--- a/grid.css
+++ b/grid.css
@@ -1,5 +1,6 @@
 #area {
     margin-top: 10vh;
+    padding-bottom: 10vh;
     display: flex;
     flex-direction: column;
     align-items: center;
@@ -38,9 +39,17 @@
         box-shadow: inset 0 0 10px rgba(255, 255, 255, 0.5);
     }
 
-    &.cell.answer::after {
-        content: "〇";
-        color: red;
+    &.cell.answer {
+        position: relative;
+
+        &::after {
+            content: "〇";
+            color: red;
+            position: absolute;
+            top: 50%;
+            left: 50%;
+            transform: translate(-50%, -50%);
+        }
     }
 }
 
