--- a/style.css
+++ b/style.css
@@ -2,6 +2,7 @@
     margin: 0;
     box-sizing: border-box;
     touch-action: manipulation;
+    user-select: none;
 }
 
 html,
@@ -54,7 +55,7 @@ body {
     display: inline-block;
     font-size: 3vh;
     width: 80vw;
-    height: 8vh;
+    height: 12vh;
     overflow: auto;
 }
 
