--- a/grid.css
+++ b/grid.css
@@ -74,6 +74,7 @@
     display: flex;
     flex-direction: column;
     align-items: center;
+    gap: 2vh;
 
     & button {
         font-weight: bold;
